force-app/main/default/objects/A360_Estate_Map__c/A360_Estate_Map__c.object-meta.xml
<CustomObject>
    <description
  >Editable estate or site map used to visualise housing units, animal occupancy, and movement context.</description>
    <label>Estate Map</label>
    <nameField>
        <label>Estate Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estate Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>