force-app/main/default/objects/A360_Estate_Map__c/fields/Background_Style__c.field-meta.xml
<CustomField>
    <fullName>Background_Style__c</fullName>
    <description
  >Optional visual style token used by the map renderer.</description>
    <label>Background Style</label>
    <length>80</length>
    <type>Text</type>
</CustomField>