force-app/main/default/objects/A360_Estate_Map__c/fields/Canvas_Height__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Height__c</fullName>
    <defaultValue>720</defaultValue>
    <description
  >Logical canvas height used for SVG viewBox rendering.</description>
    <label>Canvas Height</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>