force-app/main/default/objects/A360_Estate_Map__c/fields/Canvas_Width__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Width__c</fullName>
    <defaultValue>1200</defaultValue>
    <description
  >Logical canvas width used for SVG viewBox rendering.</description>
    <label>Canvas Width</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>