force-app/main/default/objects/A360_Estate_Map__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Marks the default map displayed by Animal360 map components.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>