force-app/main/default/objects/A360_Estate_Map__c/fields/Map_Code__c.field-meta.xml
<CustomField>
    <fullName>Map_Code__c</fullName>
    <description>Stable operational code for this estate map.</description>
    <label>Map Code</label>
    <length>60</length>
    <required>true</required>
    <unique>true</unique>
    <type>Text</type>
</CustomField>