force-app/main/default/objects/A360_Estate_Map__c/fields/Published_On__c.field-meta.xml
<CustomField>
    <fullName>Published_On__c</fullName>
    <description
  >Date and time this map version was published for operational use.</description>
    <label>Published On</label>
    <type>DateTime</type>
</CustomField>