force-app/main/default/objects/A360_Estate_Map__c/fields/Site_Account__c.field-meta.xml
<CustomField>
    <fullName>Site_Account__c</fullName>
    <description
  >Organisation or site represented by this estate map.</description>
    <label>Site Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Estate Maps</relationshipLabel>
    <relationshipName>Estate_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>